--- a/DueIoTPlatform/.project
+++ b/DueIoTPlatform/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>myApp</name>
+	<name>DueIoTPlatform</name>
 	<comment></comment>
 	<projects>
 	</projects>
