--- a/DueIoTPlatform/WebContent/WEB-INF/web.xml
+++ b/DueIoTPlatform/WebContent/WEB-INF/web.xml
@@ -9,4 +9,23 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  
+  <!-- <security-constraint>
+ <web-resource-collection>
+ 	<web-resource-name>all</web-resource-name>
+   <url-pattern>/DueIoTPlatform/SecretKey</url-pattern>
+ </web-resource-collection>
+ <auth-constraint>
+   <role-name>user</role-name>
+ </auth-constraint>
+</security-constraint>
+
+<login-config>
+ <auth-method>BASIC</auth-method>
+ <realm-name>Test Realm</realm-name>
+</login-config>
+  --> 
+  
 </web-app>
+
